tests/snapshots/yaml_suite_snapshots__yaml_suite_9MQT_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Scalar doc with '...' in content
  from: "@ingydotnet"
  tags: double scalar
  yaml: "--- \"a\n...x\nb\"\n"
  tree: "+STR\n +DOC ---\n  =VAL \"a ...x b\n -DOC\n-STR\n"
  json: "\"a ...x b\"\n"
  dump: "--- a ...x b\n"
  emit: "--- \"a ...x b\"\n"
- fail: true
  yaml: "--- \"a\n... x\nb\"\n"
  tree: "+STR\n +DOC ---\n"
  dump: null
  emit: null
