tests/snapshots/yaml_suite_snapshots__yaml_suite_9MQT_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- a ...x b\n"
  emit: "--- \"a ...x b\"\n"
  from: "@ingydotnet"
  json: "\"a ...x b\"\n"
  name: Scalar doc with '...' in content
  tags: double scalar
  tree: "+STR\n +DOC ---\n  =VAL \"a ...x b\n -DOC\n-STR\n"
  yaml: "--- \"a\n...x\nb\"\n"
- dump: null
  emit: null
  fail: true
  tree: "+STR\n +DOC ---\n"
  yaml: "--- \"a\n... x\nb\"\n"
