tests/snapshots/yaml_suite_snapshots__yaml_suite_9SA2_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Multiline double quoted flow mapping key
  from: "@perlpunk"
  tags: double flow mapping
  yaml: "---\n- { \"single line\": value}\n- { \"multi\n  line\": value}\n"
  tree: "+STR\n +DOC ---\n  +SEQ\n   +MAP {}\n    =VAL \"single line\n    =VAL :value\n   -MAP\n   +MAP {}\n    =VAL \"multi line\n    =VAL :value\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"single line\": \"value\"\n  },\n  {\n    \"multi line\": \"value\"\n  }\n]\n"
  dump: "---\n- \"single line\": value\n- \"multi line\": value\n"
