tests/snapshots/yaml_suite_snapshots__yaml_suite_9SA2_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n- \"single line\": value\n- \"multi line\": value\n"
  from: "@perlpunk"
  json: "[\n  {\n    \"single line\": \"value\"\n  },\n  {\n    \"multi line\": \"value\"\n  }\n]\n"
  name: Multiline double quoted flow mapping key
  tags: double flow mapping
  tree: "+STR\n +DOC ---\n  +SEQ\n   +MAP {}\n    =VAL \"single line\n    =VAL :value\n   -MAP\n   +MAP {}\n    =VAL \"multi line\n    =VAL :value\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "---\n- { \"single line\": value}\n- { \"multi\n  line\": value}\n"
