tests/snapshots/yaml_suite_snapshots__yaml_suite_9SHH_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 5.8. Quoted Scalar Indicators
  from: "http://www.yaml.org/spec/1.2/spec.html#id2773890"
  tags: spec scalar
  yaml: "single: 'text'\ndouble: \"text\"\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :single\n   =VAL 'text\n   =VAL :double\n   =VAL \"text\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"single\": \"text\",\n  \"double\": \"text\"\n}\n"
