tests/snapshots/yaml_suite_snapshots__yaml_suite_9SHH_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "http://www.yaml.org/spec/1.2/spec.html#id2773890"
  json: "{\n  \"single\": \"text\",\n  \"double\": \"text\"\n}\n"
  name: Spec Example 5.8. Quoted Scalar Indicators
  tags: spec scalar
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :single\n   =VAL 'text\n   =VAL :double\n   =VAL \"text\n  -MAP\n -DOC\n-STR\n"
  yaml: "single: 'text'\ndouble: \"text\"\n"
