tests/snapshots/yaml_suite_snapshots__yaml_suite_9TFX_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: "Spec Example 7.6. Double Quoted Lines [1.3]"
  from: "7A4E, modified for YAML 1.3"
  tags: double spec scalar whitespace 1.3-mod
  yaml: "---\n\" 1st non-empty\n\n 2nd non-empty␣\n 3rd non-empty \"\n"
  tree: "+STR\n +DOC ---\n  =VAL \" 1st non-empty\\n2nd non-empty 3rd non-empty␣\n -DOC\n-STR\n"
  json: "\" 1st non-empty\\n2nd non-empty 3rd non-empty \"\n"
  dump: "\" 1st non-empty\\n2nd non-empty 3rd non-empty \"\n"
  emit: "--- \" 1st non-empty\\n2nd non-empty 3rd non-empty \"\n"
